--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "*",
     "express": "^4.10.6",
     "express-handlebars": "^1.1.0",
-    "jade": "^1.8.2"
+    "jade": "^1.8.2",
+    "socket.io": "^1.2.1"
   }
 }
